<resources>
    <string name="app_name">MyConnections-android</string>
    <string name="action_settings">Settings</string>
    <string name="google_animation">Google Map Animation</string>
    <string name="google_plane_animation">Google Plane Animation</string>
    <string name="calendarButton">Calendar Button</string>
    <string name="chatButton">Chat</string>
    <string name="allUsersButton">Show All Users</string>
    <string name="title_activity_map_animation">MapAnimationActivity</string>

    <string name="facebook_app_id">567980196692866</string>
    <string name="server_client_id">356569675251-vcq1jmfqsiccvidtsap7nfckvama6228.apps.googleusercontent.com</string>


    <string name="loginButton">Login Button</string>
    <string name="facebookLogin">Facebook Login</string>
    <string name="googleLogin">Google Login</string>
    <string name="twitterLogin">Twitter Login</string>


    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="registerText">Register/Login!</string>
    <string name="enterPhone">Please, enter your phone number:</string>
    <string name="signUp">Sign up!</string>
    <string name="phoneText">Phone number</string>
    <string name="passwordText">Password</string>
    <string name="orSocialText">Or use existing accounts!</string>
</resources>
