<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.SignInActivity">

    <RelativeLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phoneText"
            android:inputType="phone"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/passportEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:layout_below="@id/phone"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/dimen_180"
            android:layout_height="@dimen/dimen_70"
            android:text="@string/loginButton"
            android:layout_below="@+id/passportEditText"
            android:layout_centerHorizontal="true" />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/socialLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_70"
            android:text="@string/orSocialText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/googleLogin"
            android:layout_width="@dimen/dimen_180"
            android:layout_height="@dimen/dimen_70"
            android:text="@string/googleLogin"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/twitterLogin"
            android:layout_width="@dimen/dimen_180"
            android:layout_height="@dimen/dimen_70"
            android:text="@string/twitterLogin"
            android:layout_below="@+id/googleLogin"
            android:layout_alignLeft="@+id/googleLogin"
            android:layout_alignStart="@+id/googleLogin" />

        <Button
            android:id="@+id/facebookLogin"
            android:layout_width="@dimen/dimen_180"
            android:layout_height="@dimen/dimen_70"
            android:text="@string/facebookLogin"
            android:layout_below="@+id/twitterLogin"
            android:layout_alignLeft="@+id/twitterLogin"
            android:layout_alignStart="@+id/twitterLogin" />
    </RelativeLayout>

    <include layout="@layout/content_sign_in"  />

</LinearLayout>
